--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
     <button id="next-btn" class="next-btn" onclick="loadNextQuestion()">Next Question</button>
   </div>
+<div id="extra-info" class="extra-info"></div>
 
   <script src="script.js"></script>
 </body>
